Fixing search bar alignment issue for IE11

--- a/src/frontend/app/ui/gallery/search/search-field/search-field.gallery.component.css
+++ b/src/frontend/app/ui/gallery/search/search-field/search-field.gallery.component.css
@@ -41,6 +41,7 @@
 }
 
 .search-hint {
+  left: 0;
   z-index: 1;
   width: 100%;
   position: absolute;
